update tetragon to 1.7.0
